--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,9 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
-openapiv3 = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_yaml = "0.9"
-tokio = { version = "1.0", features = ["full"] }
+openapiv3 = "1.0"
 thiserror = "1.0"
-uuid = { version = "1.0", features = ["v4", "serde"] }
-chrono = { version = "0.4", features = ["serde"] }
+serde_yaml = "0.9"
+tracing = "0.1.41"
