--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ openapiv3 = "1.0"
 thiserror = "1.0"
 serde_yaml = "0.9"
 tracing = "0.1.41"
+uuid = { version = "1.0", features = ["serde", "v4"] }
